--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -4,11 +4,13 @@
   "description": "Image Generator using Generative Adversarial Network",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server",
+    "build": "webpack --progress --inline"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "create-react-class": "^15.6.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -23,15 +25,25 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "^3.1.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.4",
+    "webpack-hot-middleware": "^2.20.0",
+    "webpack-livereload-plugin": "^1.0.0",
     "webpack-merge": "^4.1.1",
     "webpack-validator": "^3.0.0"
   },
-  "babel":{
-    "presets": ["react", "es2015"],
-    "plugins": ["react-hot-loader/babel"]
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ],
+    "plugins": [
+      "react-hot-loader/babel"
+    ]
   }
 }
