--- a/image-previewer/src/package.json
+++ b/image-previewer/src/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8"
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
