--- a/image-previewer/src/package.json
+++ b/image-previewer/src/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "konva": "^1.7.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.1",
+    "react-konva": "^1.5.7-beta",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8"
