--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "konva": "^1.7.6",
+    "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
@@ -19,6 +20,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
+    "react-sketch": "^0.3.3",
     "redux": "^3.7.2"
   },
   "devDependencies": {
