--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "konva": "^1.7.6",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
@@ -21,6 +22,7 @@
     "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
     "react-sketch": "^0.3.3",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
