--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -4,26 +4,42 @@
   "description": "Image Generator using Generative Adversarial Network",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open",
-    "build": "webpack --progress --verbose --colors --display-error-details",
-    "build:production": "npm run clean && npm run build"
+    "build": "better-npm-run build",
+    "start": "better-npm-run start"
+  },
+  "betterScripts": {
+    "build": {
+      "command": "webpack --progress --verbose --colors --display-error-details",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "start": {
+      "command": "webpack-dev-server --open",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    }
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
-    "konva": "^1.7.6",
+    "fabric": "^1.7.20",
     "material-ui": "^0.19.4",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
-    "react-konva": "^1.5.7-beta",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
     "react-sketch": "^0.3.3",
     "react-spinkit": "^3.0.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
