--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "dot-prop-immutable": "^1.4.0",
     "fabric": "^1.7.20",
     "material-ui": "^0.19.4",
     "prop-types": "^15.6.0",
