--- a/image-previewer/package.json
+++ b/image-previewer/package.json
@@ -21,10 +21,9 @@
       }
     }
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Dat Nguyen",
+  "license": "MIT",
   "dependencies": {
-    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
     "dot-prop-immutable": "^1.4.0",
     "fabric": "^1.7.20",
@@ -36,8 +35,6 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
-    "react-sketch": "^0.3.3",
-    "react-spinkit": "^3.0.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0"
@@ -49,6 +46,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "better-npm-run": "^0.1.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
