--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Dat Nguyen",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "dot-prop-immutable": "^1.4.0",
     "fabric": "^1.7.20",
