--- a/package.json
+++ b/package.json
@@ -1,77 +1,28 @@
 {
-  "name": "image-previewer",
-  "version": "1.0.0",
-  "description": "Image Generator using Generative Adversarial Network",
-  "main": "index.js",
-  "scripts": {
-    "build": "better-npm-run build",
-    "start": "better-npm-run start"
-  },
-  "betterScripts": {
-    "build": {
-      "command": "webpack --progress --verbose --colors --display-error-details",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "start": {
-      "command": "webpack-dev-server --open",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    }
-  },
-  "author": "Dat Nguyen",
-  "license": "MIT",
+  "name": "visualizer",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "b64-to-blob": "^1.2.19",
-    "bootstrap": "^4.0.0-alpha.6",
-    "dot-prop-immutable": "^1.4.0",
-    "fabric": "^1.7.20",
-    "material-ui": "^0.19.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-dropzone": "^4.2.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "bootstrap": "^4.1.0",
+    "fabric": "^2.2.3",
+    "material-ui": "^0.20.0",
+    "prop-type": "0.0.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-dropzone": "^4.2.9",
+    "react-redux": "^5.0.7",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.0",
     "redux-thunk": "^2.2.0"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "better-npm-run": "^0.1.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "react-hot-loader": "^3.1.1",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-hot-middleware": "^2.20.0",
-    "webpack-livereload-plugin": "^1.0.0",
-    "webpack-merge": "^4.1.1",
-    "webpack-validator": "^3.0.0"
-  },
-  "babel": {
-    "presets": [
-      "react",
-      "es2015"
-    ],
-    "plugins": [
-      "react-hot-loader/babel"
-    ]
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
